--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osjs/freedesktop-sounds",
-  "version": "3.0.0-alpha.0",
+  "version": "3.0.0",
   "description": "OS.js v3 Freedesktop Sounds",
   "files": [
     "dist/",
