--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "metadata.json"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run eslint",
+    "eslint": "eslint index.js",
     "build": "webpack",
     "watch": "webpack --watch",
-    "prepublishOnly": "rm -rf ./dist/* && NODE_ENV=production npm run build"
+    "prepublishOnly": "npm run test && rm -rf ./dist/* && NODE_ENV=production npm run build"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,9 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "@osjs/eslint-config": "^1.0.0",
     "copy-webpack-plugin": "^4.5.2",
+    "eslint": "^5.16.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0"
   },
