--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint": "eslint index.js",
     "build": "webpack",
     "watch": "webpack --watch",
-    "prepublishOnly": "npm run test && rm -rf ./dist/* && NODE_ENV=production npm run build"
+    "prepublishOnly": "rm -rf ./dist/* && NODE_ENV=production npm run build"
   },
   "repository": {
     "type": "git",
